debugged small test error